--- a/FXExperienceTools/src/main/resources/styles/main.css
+++ b/FXExperienceTools/src/main/resources/styles/main.css
@@ -13,7 +13,7 @@ different terms and without source code for the larger work.
 
 .root {
   -fx-background-color: #2D3136;
-  -fx-focus-color: rgb(147, 147, 147);
+  -fx-focus-color: #93CCE9;
   
 }
 
