--- a/FXExperienceTools/src/main/resources/styles/styler.css
+++ b/FXExperienceTools/src/main/resources/styles/styler.css
@@ -12,18 +12,18 @@ different terms and without source code for the larger work.
 */
 #gradientComboBox .list-cell {
     
-    -fx-background-color: #5A5A5A;
+    -fx-background-color: #2D3136;
     -fx-text-fill:  derive(rgb(147, 147, 147), -79%);
     
   
 
 }
 #gradientComboBox {
- -fx-border-color: #878787;
- -fx-background-color: #5A5A5A;
+ -fx-border-color: #65d2c6;
+ -fx-background-color: #2D3136;
 }
 #gradientComboBox .label{
- -fx-border-color: #878787;
+ -fx-border-color: #65d2c6;
 }
 
 
@@ -60,23 +60,29 @@ accordian-prop .titled-pane {
 
 #font-box {
     -fx-background-color: #2D3136;
-     -fx-border-color: #878787;
-     -fx-font-size: 0.875em;
+      -fx-border-radius: 6;
+  -fx-background-radius: 6;
+     
+     -fx-border-color: #65d2c6;
+     -fx-font-size:  0.9750em;
 }
 #font-box .context-menu {
-    -fx-text-fill:  #DCDCDC;
+    -fx-text-fill:  #C3C3C4;
+   
     -fx-background-color: #2D3136; 
-     -fx-border-color: #878787;
+     -fx-border-color: #65d2c6;
 }
 #font-box .label {
-    -fx-text-fill:  #DCDCDC;
-    -fx-font-size: 0.875em;
+    -fx-text-fill: #65d2c6;
+    -fx-font-size: 1em;
 }
 
 .slider-prop .track{
     -fx-background-color: #2D3136; 
-    -fx-fill: #878787;
-    -fx-border-color: #878787;
+     -fx-border-radius: 5;
+  -fx-background-radius: 5;
+    -fx-fill: #65d2c6;
+    -fx-border-color: #65d2c6;
 }
 .slider-prop .thumb {
      -fx-background-color: rgba(147, 147, 147, .5);
@@ -140,11 +146,11 @@ accordian-prop .titled-pane {
     -fx-effect: dropshadow( two-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 0 );
 }
 .prop-label .text {
-    -fx-font-size: 0.875em;
+    -fx-font-size:  0.9375em
 }
 
 .prop-label {
-    -fx-text-fill: #e3e3e3;
+    -fx-text-fill: #C2C3C4;
 }
 
 .title-label {
@@ -153,18 +159,18 @@ accordian-prop .titled-pane {
    
 }
 .check-box-prop {
-    -fx-text-fill: #e3e3e3;
+    -fx-text-fill: #C2C3C4;
     -fx-font-size: 0.875em;
 }
 
 .check-box-prop > .box {
-    -fx-background-color: #5A5A5A;
+    -fx-background-color: #2D3136;
 }
 
 
 #input-text-field {
     -fx-skin: "com.sun.javafx.scene.control.skin.TextFieldSkin";
-    -fx-text-fill: #e3e3e3;
+    -fx-text-fill: #C2C3C4;
     -fx-font-size: 0.875em;
 
 }
@@ -172,7 +178,7 @@ accordian-prop .titled-pane {
     -fx-padding: 0;
     -fx-border-insets: 3, 3;
     -fx-border-radius: 3, 3;
-     -fx-border-color: #878787;
+    -fx-border-color: #65d2c6;
     -fx-background-color: transparent;
     -fx-background-insets: 3, 3;
     -fx-background-radius: 3, 3;
@@ -180,18 +186,20 @@ accordian-prop .titled-pane {
 .input-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.InputFieldSkin";
     -fx-background-color: #2D3136; 
-     -fx-border-color: #878787;
+     -fx-border-color: #65d2c6;
+      -fx-border-radius: 3.4, 2, 2;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
     -fx-padding: 3 5 3 5;
-    -fx-prompt-text-fill: #e3e3e3;
+    -fx-prompt-text-fill: #C2C3C4;
     -fx-cursor: text;
     
 }
 
 .input-field:focused {
     -fx-background-color: #2D3136; 
-     -fx-border-color: #878787;
+     -fx-border-color: #65d2c6;
+      -fx-border-radius: 3.4, 2, 2;
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
 }
@@ -203,11 +211,12 @@ accordian-prop .titled-pane {
 .integer-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.IntegerFieldSkin";
    -fx-background-color: #2D3136; 
-    -fx-border-color: #878787;
+    -fx-border-color: #65d2c6;
+     -fx-border-radius: 3.4, 2, 2;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
     -fx-padding: 3 5 3 5;
-    -fx-prompt-text-fill: #e3e3e3;
+    -fx-prompt-text-fill: #C2C3C4;
     -fx-cursor: text;
 }
 
@@ -215,6 +224,7 @@ accordian-prop .titled-pane {
     -fx-background-color: #2D3136; 
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
+     -fx-border-radius: 3.4, 2, 2;
 }
 
 .integer-field:disabled {
@@ -225,19 +235,21 @@ accordian-prop .titled-pane {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.DoubleFieldSkin";
     -fx-font-size: 0.875em;
    -fx-background-color: #2D3136; 
-    -fx-border-color: #878787;
+    -fx-border-color: #65d2c6;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
+     -fx-border-radius: 3.4, 2, 2;
     -fx-padding: 3 5 3 5;
-    -fx-prompt-text-fill: #e3e3e3;
+    -fx-prompt-text-fill: #C2C3C4;
     -fx-cursor: text;
 }
 
 .double-field:focused {
   -fx-background-color: #2D3136; 
-   -fx-border-color: #878787;
+   -fx-border-color: #65d2c6;
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
+    -fx-border-radius: 3.4, 2, 2;
 }
 
 .double-field:disabled {
@@ -248,9 +260,10 @@ accordian-prop .titled-pane {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.WebColorFieldSkin";
     -fx-font-size: 0.875em;
     -fx-background-color: #2D3136; 
-     -fx-border-color: #878787;
+     -fx-border-color: #65d2c6;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
+     -fx-border-radius: 3.4, 2, 2;
     -fx-padding: 3 5 3 5;
     -fx-prompt-text-fill: #e3e3e3;
     -fx-cursor: text;
@@ -258,7 +271,7 @@ accordian-prop .titled-pane {
 
 .webcolor-field:focused {
     -fx-background-color: #2D3136; 
-     -fx-border-color: #878787;
+     -fx-border-color: #65d2c6;
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
 }
@@ -269,23 +282,19 @@ accordian-prop .titled-pane {
 
 .properties-combo-box .arrow-button {
     -fx-background-color:  #2D3136;
-    -fx-border-color: #878787;
+    -fx-border-color: #65d2c6;
     -fx-background-insets: -1;
     -fx-font-size: 0.875em;
 }
 
 .properties-combo-box .text {
-    -fx-text-fill:  #99c2C1;
+    -fx-text-fill:  #C2C3C4;
 }
 
 .toggle-switch {
-   -fx-background-color: 
-        #878787,
-        linear-gradient(#797979, #686868),
-        linear-gradient(#585858, #474752),
-        linear-gradient(#2D4846, #2D3136);
-    -fx-background-insets: 0,1,2,3;
-    -fx-background-radius: 3,2,2,2;
+   -fx-background-color: transparent;
+   -fx-border-color: #65d2c6;
+     -fx-border-radius: 6;
     -fx-text-fill: #C98989;
      -fx-font-size: 0.765em;
 }
