--- a/FXExperienceTools/src/main/resources/styles/preview.css
+++ b/FXExperienceTools/src/main/resources/styles/preview.css
@@ -11,9 +11,10 @@ different terms and without source code for the larger work.
     Author     : andje22
 */
 .root {
-    
+   -fx-font-family: "Khmer OS System";
 }
+
 #Preview-area {
-     -fx-background-image: url("/images/background.png");
+    -fx-background-image: url("/images/background.png");
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );
 }
