--- a/FXExperienceTools/src/main/resources/styles/styler.css
+++ b/FXExperienceTools/src/main/resources/styles/styler.css
@@ -11,38 +11,32 @@ different terms and without source code for the larger work.
     Author     : ericc
 */
 #gradientComboBox .list-cell {
-    
-    -fx-background-color: #2D3136;
-    -fx-text-fill:  derive(rgb(147, 147, 147), -79%);
-    
-  
-
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-text-fill:  -fe-light-inner-text;
 }
 #gradientComboBox {
- -fx-border-color: #65d2c6;
- -fx-background-color: #2D3136;
-}
-#gradientComboBox .label{
- -fx-border-color: #65d2c6;
+    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-dark-inner-background;
 }
 
+#gradientComboBox .label{
+    -fx-border-color: -fe-light-border;
+}
 
 #ContentArea {
     -fx-background: black;
 }
+
 anchor-pane {
-     -fx-background-color:  #5A5A5A;
+    -fx-background-color:  #5A5A5A;
 }
+
 accordian-prop .titled-pane {
-     -fx-background-color: #5A5A5A;
-}
-.animation-label {
-    -fx-font-weight: bold; 
-    -fx-font-size: 1.1em;
+    -fx-background-color: #5A5A5A;
 }
 
 .split-pane-caspian:horizontal {
-     -fx-background-insets: -1 -1 -1 -1;
+    -fx-background-insets: -1 -1 -1 -1;
     -fx-padding: 0;
 }
 
@@ -50,48 +44,45 @@ accordian-prop .titled-pane {
     -fx-background-insets: -1 -1 -1 -1;
     -fx-background-color: transparent;
     -fx-padding: 0;
-
 }
 
 #gradientComboBox .combo-box-popup .list-view .list-cell {
     -fx-padding: 3 3 3 3;
 }
 
-
 #font-box {
-    -fx-background-color: #2D3136;
-      -fx-border-radius: 6;
-  -fx-background-radius: 6;
-     
-     -fx-border-color: #65d2c6;
-     -fx-font-size:  0.9750em;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
+    -fx-border-radius: 6;
+    -fx-background-radius: 6;
+    -fx-font-size:  0.9750em;
 }
+
 #font-box .context-menu {
-    -fx-text-fill:  #C3C3C4;
-   
-    -fx-background-color: #2D3136; 
-     -fx-border-color: #65d2c6;
+    -fx-text-fill: -fe-light-inner-text;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
 }
+
 #font-box .label {
-    -fx-text-fill: #65d2c6;
+    -fx-text-fill: -fe-light-body-text;
     -fx-font-size: 1em;
 }
 
 .slider-prop .track{
-    -fx-background-color: #2D3136; 
-     -fx-border-radius: 5;
-  -fx-background-radius: 5;
-    -fx-fill: #65d2c6;
-    -fx-border-color: #65d2c6;
+    -fx-background-color: -fe-dark-inner-background; 
+    -fx-border-color: -fe-light-border;
+    -fx-border-radius: 5;
+    -fx-background-radius: 5;   
 }
+
 .slider-prop .thumb {
-     -fx-background-color: rgba(147, 147, 147, .5);
+    -fx-background-color: rgba(147, 147, 147, .5);
 }
 
 .slider-prop .thumb:hover{
     -fx-background-color: rgb(147, 147, 147);
 }
-
 
 
 /*******************************************************************************
@@ -107,17 +98,17 @@ accordian-prop .titled-pane {
     -fx-effect: dropshadow( two-pass-box, rgba(0, 0, 0, 0.2), 5, 0.0, 0, 1 );
 }
 .titled-pane:expanded .content {
-  -fx-background-color: #31363B;
-  -fx-border-color: transparent;
-    
+    -fx-background-color: -fe-dark-body-background;
+    -fx-border-color: transparent;
+
 }
 .titled-pane .content {
-  -fx-background-color: #31363B;
-  -fx-border-color: transparent;
-    
+    -fx-background-color: -fe-dark-body-background;
+    -fx-border-color: transparent;
+
 }
 .titled-pane .context-menu {
-     -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), rgb(147, 147, 147);
+    -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), rgb(147, 147, 147);
 }
 
 .titled-pane > .title > .text {
@@ -133,7 +124,7 @@ accordian-prop .titled-pane {
 }
 
 .sub-title {
-     -fx-text-fill: derive(rgb(147, 147, 147), 85%);
+    -fx-text-fill: derive(rgb(147, 147, 147), 85%);
     -fx-font-size: 0.875em;
     -fx-border-width: 0.5 0 0.5 0;
     -fx-border-color: derive(rgb(122, 122, 122), -85%);
@@ -150,27 +141,26 @@ accordian-prop .titled-pane {
 }
 
 .prop-label {
-    -fx-text-fill: #C2C3C4;
+    -fx-text-fill: -fe-light-body-text;
 }
 
 .title-label {
-      -fx-font-size: 0.875em;
-   -fx-text-fill:#e3e3e3;
-   
+    -fx-font-size: 0.875em;
+    -fx-text-fill: -fe-light-body-text;
 }
 .check-box-prop {
-    -fx-text-fill: #C2C3C4;
+    -fx-text-fill: -fe-light-inner-text;
     -fx-font-size: 0.875em;
 }
 
 .check-box-prop > .box {
-    -fx-background-color: #2D3136;
+    -fx-background-color: -fe-dark-inner-background;
 }
 
 
 #input-text-field {
     -fx-skin: "com.sun.javafx.scene.control.skin.TextFieldSkin";
-    -fx-text-fill: #C2C3C4;
+    -fx-text-fill: -fe-light-inner-text;
     -fx-font-size: 0.875em;
 
 }
@@ -178,28 +168,28 @@ accordian-prop .titled-pane {
     -fx-padding: 0;
     -fx-border-insets: 3, 3;
     -fx-border-radius: 3, 3;
-    -fx-border-color: #65d2c6;
+    -fx-border-color: -fe-light-border;
     -fx-background-color: transparent;
     -fx-background-insets: 3, 3;
     -fx-background-radius: 3, 3;
 }
 .input-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.InputFieldSkin";
-    -fx-background-color: #2D3136; 
-     -fx-border-color: #65d2c6;
-      -fx-border-radius: 3.4, 2, 2;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: #65d2c6;
+    -fx-border-radius: 3.4, 2, 2;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
     -fx-padding: 3 5 3 5;
-    -fx-prompt-text-fill: #C2C3C4;
+    -fx-prompt-text-fill: -fe-light-inner-text;
     -fx-cursor: text;
-    
+
 }
 
 .input-field:focused {
-    -fx-background-color: #2D3136; 
-     -fx-border-color: #65d2c6;
-      -fx-border-radius: 3.4, 2, 2;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
+    -fx-border-radius: 3.4, 2, 2;
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
 }
@@ -210,21 +200,21 @@ accordian-prop .titled-pane {
 
 .integer-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.IntegerFieldSkin";
-   -fx-background-color: #2D3136; 
-    -fx-border-color: #65d2c6;
-     -fx-border-radius: 3.4, 2, 2;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
+    -fx-border-radius: 3.4, 2, 2;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
     -fx-padding: 3 5 3 5;
-    -fx-prompt-text-fill: #C2C3C4;
+    -fx-prompt-text-fill: -fe-light-inner-text;
     -fx-cursor: text;
 }
 
 .integer-field:focused {
-    -fx-background-color: #2D3136; 
+    -fx-background-color: -fe-dark-inner-background;
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
-     -fx-border-radius: 3.4, 2, 2;
+    -fx-border-radius: 3.4, 2, 2;
 }
 
 .integer-field:disabled {
@@ -234,19 +224,19 @@ accordian-prop .titled-pane {
 .double-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.DoubleFieldSkin";
     -fx-font-size: 0.875em;
-   -fx-background-color: #2D3136; 
-    -fx-border-color: #65d2c6;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
-     -fx-border-radius: 3.4, 2, 2;
+    -fx-border-radius: 3.4, 2, 2;
     -fx-padding: 3 5 3 5;
-    -fx-prompt-text-fill: #C2C3C4;
+    -fx-prompt-text-fill: -fe-light-inner-text;
     -fx-cursor: text;
 }
 
 .double-field:focused {
-  -fx-background-color: #2D3136; 
-   -fx-border-color: #65d2c6;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
     -fx-border-radius: 3.4, 2, 2;
@@ -259,19 +249,19 @@ accordian-prop .titled-pane {
 .webcolor-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.WebColorFieldSkin";
     -fx-font-size: 0.875em;
-    -fx-background-color: #2D3136; 
-     -fx-border-color: #65d2c6;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
-     -fx-border-radius: 3.4, 2, 2;
+    -fx-border-radius: 3.4, 2, 2;
     -fx-padding: 3 5 3 5;
-    -fx-prompt-text-fill: #e3e3e3;
+    -fx-prompt-text-fill: -fe-light-inner-text;
     -fx-cursor: text;
 }
 
 .webcolor-field:focused {
-    -fx-background-color: #2D3136; 
-     -fx-border-color: #65d2c6;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
 }
@@ -281,25 +271,25 @@ accordian-prop .titled-pane {
 }
 
 .properties-combo-box .arrow-button {
-    -fx-background-color:  #2D3136;
-    -fx-border-color: #65d2c6;
+    -fx-background-color: -fe-dark-inner-background;
+    -fx-border-color: -fe-light-border;
     -fx-background-insets: -1;
     -fx-font-size: 0.875em;
 }
 
 .properties-combo-box .text {
-    -fx-text-fill:  #C2C3C4;
+    -fx-text-fill: -fe-light-inner-text;
 }
 
 .toggle-switch {
-   -fx-background-color: transparent;
-   -fx-border-color: #65d2c6;
-     -fx-border-radius: 6;
+    -fx-background-color: transparent;
+    -fx-border-color: -fe-light-border;
+    -fx-border-radius: 6;
     -fx-text-fill: #C98989;
-     -fx-font-size: 0.765em;
+    -fx-font-size: 0.765em;
 }
 
 .toggle-switch:selected {
     -fx-text-fill: #6699ff;
-     -fx-font-size: 0.765em;
+    -fx-font-size: 0.765em;
 }
