--- a/FXExperienceTools/src/main/resources/fxml/FXMLSplinePanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLSplinePanel.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
@@ -23,16 +24,16 @@
           <ColumnConstraints maxWidth="200.0" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints prefHeight="30.0" vgrow="NEVER" />
+            <RowConstraints prefHeight="30.0" vgrow="ALWAYS" />
             <RowConstraints vgrow="NEVER" />
-            <RowConstraints prefHeight="35.0" vgrow="NEVER" />
-            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="140.0" vgrow="NEVER" />
-            <RowConstraints prefHeight="25.0" vgrow="NEVER" />
-            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="130.0" vgrow="NEVER" />
-            <RowConstraints prefHeight="25.0" vgrow="NEVER" />
-            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="100.0" vgrow="ALWAYS" />
+            <RowConstraints prefHeight="25.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="90.0" vgrow="ALWAYS" />
+            <RowConstraints prefHeight="25.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="130.0" vgrow="ALWAYS" />
+            <RowConstraints prefHeight="40.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="ALWAYS" />
           <RowConstraints vgrow="NEVER" />
-          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
+          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="ALWAYS" />
           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="55.0" vgrow="NEVER" />
         </rowConstraints>
          <children>
@@ -42,26 +43,33 @@
                   <Button fx:id="copyButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="42.0" prefWidth="98.0" styleClass="big-button" text="Copy Code" />
                </children>
             </HBox>
-            <Label styleClass="animation-label" text="Animation Preview" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Label styleClass="animation-label" text="Animation Preview" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
             </Label>
-            <Label text="Scale" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
-            <Label layoutX="822.0" layoutY="57.0" text="Rotate" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-            <Rectangle fx:id="fadeSquare" arcHeight="5.0" arcWidth="5.0" height="80.0" layoutX="800.0" layoutY="241.0" stroke="#65655fab" strokeType="INSIDE" strokeWidth="3.0" width="130.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-               <fill>
-                  <LinearGradient endX="1.0" endY="1.0">
-                     <stops>
-                        <Stop color="#d1d1d1" />
-                        <Stop color="#ee8aa0" offset="0.007246376811594203" />
-                        <Stop color="#797979" offset="0.3079710144927536" />
-                        <Stop color="#211e1e" offset="0.9927536231884058" />
-                        <Stop color="TRANSPARENT" offset="1.0" />
-                     </stops>
-                  </LinearGradient>
-               </fill></Rectangle>
-            <Group translateX="0.5" translateY="0.5" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" GridPane.valignment="CENTER">
+            <VBox alignment="CENTER" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="6" GridPane.rowSpan="2" GridPane.vgrow="NEVER">
+               <children>
+                  <Label alignment="BOTTOM_CENTER" prefHeight="0.0" prefWidth="36.0" text="Fade" />
+                  <Rectangle fx:id="fadeSquare" arcHeight="5.0" arcWidth="5.0" height="110.0" stroke="#65655fab" strokeType="INSIDE" strokeWidth="3.0" width="140.0">
+                     <fill>
+                        <LinearGradient endX="1.0" endY="1.0">
+                           <stops>
+                              <Stop color="#d1d1d1" />
+                              <Stop color="#ee8aa0" offset="0.007246376811594203" />
+                              <Stop color="#797979" offset="0.3079710144927536" />
+                              <Stop color="#211e1e" offset="0.9927536231884058" />
+                              <Stop color="TRANSPARENT" offset="1.0" />
+                           </stops>
+                        </LinearGradient>
+                     </fill>
+                  </Rectangle>
+               </children>
+            </VBox>
+            <Group translateX="0.5" translateY="0.5" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" GridPane.valignment="TOP">
                <children>
                   <Rectangle arcHeight="20.0" arcWidth="20.0" height="20.0" stroke="#ffffff80" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeType="OUTSIDE" width="200.0">
                      <fill>
@@ -90,33 +98,46 @@
                   </Circle>
                </children>
             </Group>
-            <Label alignment="BOTTOM_CENTER" prefHeight="0.0" prefWidth="36.0" text="Fade" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
             <Label text="Linear" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER" />
-            <Circle fx:id="scaleCircle" radius="55.0" stroke="TRANSPARENT" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-               <fill>
-                  <RadialGradient centerX="0.5" centerY="0.5" focusDistance="-0.33333333333333326" radius="0.7380952380952381">
-                     <stops>
-                        <Stop color="#6e47c9" />
-                        <Stop color="#b9a2a2" offset="0.007246376811594203" />
-                        <Stop color="#140d25" offset="0.7200000000000001" />
-                        <Stop color="#72171700" offset="0.7296296296296297" />
-                        <Stop color="#72171700" offset="1.0" />
-                     </stops>
-                  </RadialGradient>
-               </fill></Circle>
-            <Rectangle fx:id="rotateRectangle" arcHeight="10.0" arcWidth="10.0" height="90.0" stroke="#545454" strokeLineCap="ROUND" strokeType="INSIDE" width="90.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
-               <fill>
-                  <RadialGradient centerX="0.5056818181818182" centerY="0.5" cycleMethod="REPEAT" focusAngle="173.42" focusDistance="-2.220446049250313E-16" radius="0.07317073170731717">
-                     <stops>
-                        <Stop color="#795d5d" />
-                        <Stop color="#795d5d" offset="0.007246376811594203" />
-                        <Stop color="#363636" offset="0.34782608695652173" />
-                        <Stop color="#17171700" offset="0.7971014492753623" />
-                        <Stop color="#aeaeae" offset="1.0" />
-                     </stops>
-                  </RadialGradient>
-               </fill>
-            </Rectangle>
+            <VBox alignment="TOP_CENTER" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.rowSpan="2" GridPane.vgrow="NEVER">
+               <children>
+                  <Label text="Scale" />
+                  <Circle fx:id="scaleCircle" radius="55.0" stroke="TRANSPARENT" strokeType="INSIDE">
+                     <fill>
+                        <RadialGradient centerX="0.5" centerY="0.5" focusDistance="-0.33333333333333326" radius="0.7380952380952381">
+                           <stops>
+                              <Stop color="#6e47c9" />
+                              <Stop color="#b9a2a2" offset="0.007246376811594203" />
+                              <Stop color="#140d25" offset="0.7200000000000001" />
+                              <Stop color="#72171700" offset="0.7296296296296297" />
+                              <Stop color="#72171700" offset="1.0" />
+                           </stops>
+                        </RadialGradient>
+                     </fill>
+                  </Circle>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" spacing="25.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="2">
+               <children>
+                  <Label text="Rotate">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin></Label>
+                  <Rectangle fx:id="rotateRectangle" arcHeight="10.0" arcWidth="10.0" height="110.0" rotate="45.0" stroke="#545454" strokeLineCap="ROUND" strokeType="INSIDE" width="110.0">
+                     <fill>
+                        <RadialGradient centerX="0.5056818181818182" centerY="0.5" cycleMethod="REPEAT" focusAngle="173.42" focusDistance="-2.220446049250313E-16" radius="0.07317073170731717">
+                           <stops>
+                              <Stop color="#795d5d" />
+                              <Stop color="#795d5d" offset="0.007246376811594203" />
+                              <Stop color="#363636" offset="0.34782608695652173" />
+                              <Stop color="#17171700" offset="0.7971014492753623" />
+                              <Stop color="#aeaeae" offset="1.0" />
+                           </stops>
+                        </RadialGradient>
+                     </fill>
+                  </Rectangle>
+               </children>
+            </VBox>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="20.0" top="10.0" />
