--- a/FXExperienceTools/src/main/resources/styles/spline.css
+++ b/FXExperienceTools/src/main/resources/styles/spline.css
@@ -33,7 +33,9 @@ different terms and without source code for the larger work.
 
 .code-text {
     -fx-font-family: "Courier New";
-    -fx-font-size: 16px;
+    -fx-font-size: 18px;
+    -fx-text-fill: white;
+    -fx-background-color: transparent;
 }
 .big-button {
     -fx-font-size: 0.875em;
